Discover page ported

--- a/public/index.html
+++ b/public/index.html
@@ -91,5 +91,22 @@
     <script src="%PUBLIC_URL%/js/custom.min.js"></script>
 
 
+
+
+    <script src="%PUBLIC_URL%/js/lib/datamap/d3.min.js"></script>
+    <script src="%PUBLIC_URL%/js/lib/datamap/topojson.js"></script>
+    <script src="%PUBLIC_URL%/js/lib/datamap/datamaps.world.min.js"></script>
+    <script src="%PUBLIC_URL%/js/lib/datamap/datamap-init.js"></script>
+
+    <script src="%PUBLIC_URL%/js/lib/weather/jquery.simpleWeather.min.js"></script>
+    <script src="%PUBLIC_URL%/js/lib/weather/weather-init.js"></script>
+    <script src="%PUBLIC_URL%/js/lib/owl-carousel/owl.carousel.min.js"></script>
+    <script src="%PUBLIC_URL%/js/lib/owl-carousel/owl.carousel-init.js"></script>
+
+
+    <script src="%PUBLIC_URL%/js/lib/chartist/chartist.min.js"></script>
+    <script src="%PUBLIC_URL%/js/lib/chartist/chartist-plugin-tooltip.min.js"></script>
+    <script src="%PUBLIC_URL%/js/lib/chartist/chartist-init.js"></script>
+
   </body>
 </html>
