--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <link href="%PUBLIC_URL%/css/helper.css" rel="stylesheet">
     <link href="%PUBLIC_URL%/css/style.css" rel="stylesheet">
 
-    <title>React App</title>
+    <title>Dashboard</title>
   </head>
   <body>
     <noscript>
